# fin

./: .gitignore  AGENTS.md  README.md  TODO.md  index.html  package-lock.json  package.json  session.sh
.github/workflows/: build.yml  ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/balances/: AddBalanceModal.tsx  AddBillModal.tsx  LogPaymentModal.tsx
src/components/funds/: FundTransferModal.tsx  SurplusRedistributeModal.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/messages/: PatternBuilder.tsx
src/components/predictions/: PredictionsContent.tsx
src/components/shared/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  FilePicker.tsx  FloatingAddButton.tsx  Icons.tsx  LoadingScreen.tsx  Modal.tsx  Select.tsx
src/context/: AppContext.tsx  initialState.ts
src/data/: seedData.ts
src/pages/: BalanceDetailPage.tsx  BalancesPage.tsx  DashboardPage.tsx  DebtsPage.tsx  DetectTransactionPage.tsx  ExpensesPage.tsx  FundDetailPage.tsx  FundsPage.tsx  HomePage.tsx  InvestmentsPage.tsx  ManageFundsPage.tsx  MessagesPage.tsx  NeedsPage.tsx  PredictionsPage.tsx  ReportsPage.tsx  SettingsPage.tsx  TransactionsPage.tsx  WantsPage.tsx
src/storage/: LocalStorageService.ts  StorageService.ts  TauriStorageService.ts  WebStorageService.ts  fileDB.ts  schema.sql
src/types/: index.ts
src/utils/: helpers.ts  imageCompression.ts  matching.ts  toast.ts
