[package]
name = "fin"
version = "0.1.0"
description = "Personal finance manager"
authors = ["you"]
edition = "2021"

[lib]
name = "fin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = { version = "2" }
tauri-plugin-deep-link = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
